# code-challenge-2024-f321x

./: .gitignore  SOLUTION.md  output.txt  run.sh
.devcontainer/: devcontainer.json
solution/code-challenge-f321x/: Cargo.toml  todo.txt
solution/code-challenge-f321x/src/: main.rs  utils_main.rs
solution/code-challenge-f321x/src/mining/: assign_parents.rs  construct_coinbase.rs  header.rs  mod.rs  packet_weight.rs  transaction_sorting.rs  tx_sorting.rs
solution/code-challenge-f321x/src/parsing/: json_parsing.rs  mod.rs  transaction_structs.rs
solution/code-challenge-f321x/src/validation/: mod.rs  script.rs  signature_verification.rs  utils.rs  validate_parsing.rs  validate_values.rs  weight_calculation.rs
solution/code-challenge-f321x/tests/: test_tx_assembly.py  validate_wtxids.py
