[package]
name = "code-challenge-f321x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
hex-literal = "0.4.1"
ripemd = "0.1.3"
secp256k1 = { version = "0.28.2", features = ["global-context"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_with = "3.7.0"
sha2 = "0.10.8"
